[gd_scene load_steps=9 format=3 uid="uid://caxas1rhnh5mj"]

[ext_resource type="VideoStream" path="res://art/menu/5d5013cbcab7ddef4d74e5087bfcfe80.ogv" id="1_7lft2"]
[ext_resource type="Script" path="res://scripts/menu.gd" id="1_fiqhr"]
[ext_resource type="FontFile" uid="uid://cwi773dakccgf" path="res://art/Â´fonts/Renogare-Regular.otf" id="2_8sgnd"]
[ext_resource type="Theme" uid="uid://t7heidau4wa0" path="res://themes/menu.tres" id="3_k720t"]

[sub_resource type="Animation" id="Animation_lw8gm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_s6g4q"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0jvpp"]
_data = {
"RESET": SubResource("Animation_lw8gm"),
"fade_out": SubResource("Animation_s6g4q")
}

[sub_resource type="Environment" id="Environment_ouipu"]
background_mode = 3
glow_enabled = true
glow_normalized = true
glow_intensity = 1.0
glow_strength = 0.8
glow_blend_mode = 0
glow_hdr_scale = 1.0

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fiqhr")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
modulate = Color(0.683594, 0.683594, 0.683594, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1080.0
offset_top = -608.0
offset_right = 1080.0
offset_bottom = 608.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("1_7lft2")
autoplay = true
loop = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -56.0
offset_top = 120.0
offset_right = -120.0
offset_bottom = 66.0
grow_horizontal = 0
theme_override_constants/separation = 64

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_k720t")
theme_override_fonts/font = ExtResource("2_8sgnd")
theme_override_font_sizes/font_size = 60
text = "START"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_k720t")
theme_override_fonts/font = ExtResource("2_8sgnd")
theme_override_font_sizes/font_size = 60
text = "EXIT"

[node name="Title" type="Label" parent="."]
self_modulate = Color(1, 1, 1, 0.5)
layout_mode = 0
offset_left = 1108.0
offset_top = 121.0
offset_right = 1624.0
offset_bottom = 316.0
theme_override_fonts/font = ExtResource("2_8sgnd")
theme_override_font_sizes/font_size = 165
text = "Kodai"

[node name="Transition" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0jvpp")
}

[node name="ColorRect" type="ColorRect" parent="Transition"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ouipu")

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="animation_finished" from="Transition" to="." method="_on_transition_animation_finished"]
